new button color and few modifications on about page

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,54 @@ body{
 }
 
 
+
+.btn-purple {
+  color: #FFFFFF;
+  background-color: #37474F;
+  border-color: #1B2226;
+}
+
+.btn-purple:hover,
+.btn-purple:focus,
+.btn-purple:active,
+.btn-purple.active,
+.open .dropdown-toggle.btn-purple {
+  color: #FFFFFF;
+  background-color: #1B2226;
+  border-color: #1B2226;
+}
+
+.btn-purple:active,
+.btn-purple.active,
+.open .dropdown-toggle.btn-purple {
+  background-image: none;
+}
+
+.btn-purple.disabled,
+.btn-purple[disabled],
+fieldset[disabled] .btn-purple,
+.btn-purple.disabled:hover,
+.btn-purple[disabled]:hover,
+fieldset[disabled] .btn-purple:hover,
+.btn-purple.disabled:focus,
+.btn-purple[disabled]:focus,
+fieldset[disabled] .btn-purple:focus,
+.btn-purple.disabled:active,
+.btn-purple[disabled]:active,
+fieldset[disabled] .btn-purple:active,
+.btn-purple.disabled.active,
+.btn-purple[disabled].active,
+fieldset[disabled] .btn-purple.active {
+  background-color: #37474F;
+  border-color: #1B2226;
+}
+
+.btn-purple .badge {
+  color: #37474F;
+  background-color: #FFFFFF;
+}
+
+
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: white;
 }
